# quick-evac

./: .gitignore  README.md  init_db.bat  init_db.py  pyproject.toml
backend/: .env  app.py  config.py
backend/models/: __init__.py  user_location.py  zone.py
backend/routes/: __init__.py  location_routes.py  zone_routes.py
backend/services/: location_service.py  sms_service.py  zone_service.py
backend/utils/: helpers.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/components/: AlertBanner.js  EvacuationMap.js  LocationDisplay.js  PhoneForm.js
frontend/src/services/: api.js  location.js
frontend/src/styles/: theme.js
